[gd_scene load_steps=3 format=3 uid="uid://bcxpkps47jk50"]

[ext_resource type="Script" uid="uid://3c0w44w3go56" path="res://scenes/pause.gd" id="1_0ep5p"]
[ext_resource type="Texture2D" uid="uid://bhy1v5877xlcd" path="res://sprites/you.png" id="2_wcpj6"]

[node name="Pause" type="Node2D"]
process_mode = 3
z_index = 4096
script = ExtResource("1_0ep5p")

[node name="back" type="ColorRect" parent="."]
process_mode = 3
offset_left = 70.0
offset_top = 11.0
offset_right = 965.0
offset_bottom = 390.0
mouse_filter = 2
color = Color(0.0784314, 0, 0.0784314, 1)

[node name="title_lbl" type="Label" parent="."]
process_mode = 3
offset_left = 70.0
offset_top = 15.0
offset_right = 965.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 37
text = "PAUSED"
horizontal_alignment = 1

[node name="btn_aceptar" type="Button" parent="."]
process_mode = 3
offset_left = 406.0
offset_top = 314.0
offset_right = 618.0
offset_bottom = 364.0
text = "ACEPTAR"

[node name="You" type="Sprite2D" parent="."]
position = Vector2(175, 195)
scale = Vector2(5, 5)
texture = ExtResource("2_wcpj6")

[node name="lbl_1" type="Label" parent="."]
offset_left = 304.0
offset_top = 116.0
offset_right = 377.0
offset_bottom = 139.0
text = "DAMAGE:"
horizontal_alignment = 2

[node name="value" type="Label" parent="lbl_1"]
layout_mode = 0
offset_left = 81.0
offset_right = 121.0
offset_bottom = 23.0
text = "100"

[node name="lbl_2" type="Label" parent="."]
offset_left = 302.0
offset_top = 141.0
offset_right = 377.0
offset_bottom = 164.0
text = "MAX LIFE:"
horizontal_alignment = 2

[node name="value" type="Label" parent="lbl_2"]
layout_mode = 0
offset_left = 83.0
offset_right = 123.0
offset_bottom = 23.0
text = "100"

[node name="lbl_3" type="Label" parent="."]
offset_left = 304.0
offset_top = 165.0
offset_right = 377.0
offset_bottom = 188.0
text = "RANGE:"
horizontal_alignment = 2

[node name="value" type="Label" parent="lbl_3"]
layout_mode = 0
offset_left = 82.0
offset_right = 122.0
offset_bottom = 23.0
text = "100"

[node name="lbl_4" type="Label" parent="."]
offset_left = 303.0
offset_top = 190.0
offset_right = 376.0
offset_bottom = 213.0
text = "SPEED:"
horizontal_alignment = 2

[node name="value" type="Label" parent="lbl_4"]
layout_mode = 0
offset_left = 83.0
offset_right = 123.0
offset_bottom = 23.0
text = "100"

[node name="lbl_5" type="Label" parent="."]
offset_left = 303.0
offset_top = 214.0
offset_right = 376.0
offset_bottom = 237.0
text = "COLLECT:"
horizontal_alignment = 2

[node name="value" type="Label" parent="lbl_5"]
layout_mode = 0
offset_left = 83.0
offset_right = 123.0
offset_bottom = 23.0
text = "100"

[node name="lbl_6" type="Label" parent="."]
offset_left = 298.0
offset_top = 239.0
offset_right = 376.0
offset_bottom = 262.0
text = "CADENCE:"
horizontal_alignment = 2

[node name="value" type="Label" parent="lbl_6"]
layout_mode = 0
offset_left = 87.0
offset_right = 127.0
offset_bottom = 23.0
text = "100"

[node name="lbl_8" type="Label" parent="."]
offset_left = 139.0
offset_top = 285.0
offset_right = 212.0
offset_bottom = 308.0
text = "LVL:"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="btn_aceptar" to="." method="_on_btn_aceptar_pressed"]
